core.css
* { margin: 0px; padding: 0px }
html { overflow-y: scroll; }
body { font-family: "Open Sans", Tahoma; font-size: 18px; color: #333; background-color: #f0f0f0; }
input, select, textarea { font-family: "Open Sans", Tahama; color: #111; background-color: #fff; border-radius: 3px; padding: 2px; }
h1, h2, h3, h4, h5, h6 { font-weight: 100; }
a, a:visited, a:active, a:hover { outline: none; text-decoration: underline; color: #06f; }
table, p, blockquote, ol, ul { margin-bottom: 1em; text-shadow: 1px 1px #eee; }

.wrapper { 
    max-width: 1300px; 
    margin: 0px auto; 
}
#header { 
    height: 15em; 
    background-color: #012; 
    color: #fff; 
    border-bottom: 2px solid #a0a0a0; 
    background-size: 100%;
    box-shadow: 0px 5px 10px #888; 
    margin-bottom: 2em;
    position: relative;
}
#header .wrapper h3 { 
    font-size: 3em;
    text-shadow: 0px 0px 10px #ccc;
    line-height: 3em;
    padding: 2em 0 0 .25em;
}

#header a.hamburger {
    float: right;
    color: #eee;
    margin-top: -1.5em;
    text-decoration: none;
    font-size: 2em;
    cursor: pointer;
    display: none;
    margin-right: .5em;
}

#header .wrapper ul { list-style-type: none; margin-top: -14em; float: right; margin-right: 1em; } 
#header .wrapper ul li { display: inline-block; text-shadow: none; margin-left: 2em; }
#header .wrapper ul li a { text-decoration: none; color: #fff; letter-spacing: 2px; }

#content { min-height: 20em; }
#content .leftCol { padding: 0 1em; width: 65%; float: left; }
#content .rightCol { width: 30%; float: left; }

p.social { border-top: 2px solid #c0c0c0; border-bottom: 2px solid #c0c0c0; text-align: center; padding: .5em 0; margin: 2em 0; }
p.social a { display: inline-block; margin-right: 1em; }

p.banter { padding: 0 1em; }

div.mugShot { text-align: center; }
div.mugShot img { width: 200px; height: 200px; border: 5px solid #012; border-radius: 5px; box-shadow: 0px 0px 20px #111; background-color: #000; }

#footer { clear: both; padding-top: 1em; }
#footer .wrapper { padding: 0 1em; }
#footer .wrapper p { border-top: 1px solid #a0a0a0; font-size: .875em; line-height: 2em; } 

.post h2 { font-weight: bold; margin-bottom: 1em; } 
.post h3 { font-weight: bold; font-size: 1em; margin-bottom: 1em; }
.noItems { font-style: italic; }

@media (max-height: 850px){
    body { font-size: 15px; }
    #header { height: 10em; }
    #header .wrapper h3 { font-size: 2em; }
    #header .wrapper ul { margin-top: -9em; }
}

@media (max-height: 550px){
    #header { height: 3.5em; }
    #header .wrapper h3 {
        font-size: 2em;
        line-height: 1.5em;
        padding: 0 0 0 .25em;
    }
    #header .wrapper ul { margin-top: -2em; }
    #header .wrapper ul li {
        margin-left: .5em;
    }
}

@media (max-width: 1024px) {
    body { font-size: 15px; }
    #header { height: 3.5em; }
    #header .wrapper h3 {
        font-size: 1.5em;
        line-height: 2.2em;
        padding: 0 0 0 .25em;
    }
    #header .wrapper ul { margin-top: -2.2em; }
    #header .wrapper ul li {
        margin-left: .5em;
    }
}

@media (max-width: 790px) {
    #content .rightCol {
        float: none;
        width: auto;
    }
    #content .leftCol {
        float: none;
        width: auto;
    }
    #content div.mugShot { display: none; }
    #content p.banter { display: none; }
    #content p.social { border-top: none; border-bottom: none; }
}

@media (max-width: 480px){
    #header .wrapper ul {
      position: absolute; 
      top: 5.7em;
      left: 0;
      right: 0;
      background-color: #012;
      margin-right: 0;
      display: none;
      box-shadow: 0px 0px 10px #012;
    }
    #header .wrapper ul li {
        display: block;
    }
    #header .wrapper ul li a {
        display: block; 
        padding: .75em 0;
    }
    #header .wrapper a.hamburger { display: inline-block; }
}

